<?xml version="1.0"?>
<package format="3">
  <name>nav2_se2_hybrid_benchmark</name>
  <version>0.1.0</version>
  <description>TurtleBot3 simulation benchmark harness for Nav2 smoothers.</description>
  <maintainer email="dev@example.com">Nav2 Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
