<?xml version="1.0"?>
<package format="3">
  <name>nav2_se2_hybrid_smoother</name>
  <version>0.1.0</version>
  <description>Minimal hybrid SE(2)-aware Nav2 smoother plugin prototype.</description>
  <maintainer email="dev@example.com">Nav2 Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
