<?xml version="1.0"?>
<package format="3">
  <name>nav2_se2_hybrid_smoother</name>
  <version>0.1.0</version>
  <description>Hybrid conservative SE(2)-aware Nav2 smoother plugin for smoother_server.</description>
  <maintainer email="dev@example.com">Nav2 Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
